buildpack and dockerile commit

--- a/DockerizeMicroservices/Loans/pom.xml
+++ b/DockerizeMicroservices/Loans/pom.xml
@@ -74,12 +74,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
+                    <image>
+                        <name>avnish09/${project.artifactId}:1.0</name>
+                    </image>
                 </configuration>
             </plugin>
         </plugins>
