--- a/DockerizeMicroservices/Cards/Dockerfile
+++ b/DockerizeMicroservices/Cards/Dockerfile
@@ -2,10 +2,10 @@
 FROM openjdk:17-jdk-slim
 
 #Information around who maintains the image
-MAINTAINER avnish-shrivastava
+MAINTAINER avnish.shrivastava
 
 # Add the application's jar to the image
-COPY target/accounts-0.0.1-SNAPSHOT.jar accounts-0.0.1-SNAPSHOT.jar
+COPY target/cards-0.0.1-SNAPSHOT.jar cards-0.0.1-SNAPSHOT.jar
 
 # execute the application
-ENTRYPOINT ["java", "-jar", "accounts-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "cards-0.0.1-SNAPSHOT.jar"]
