--- a/DockerizeMicroservices/Cards/pom.xml
+++ b/DockerizeMicroservices/Cards/pom.xml
@@ -82,6 +82,16 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <to>
+                        <image>avnish09/${project.artifactId}:01</image>
+                    </to>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
