--- a/Section 1 - BuildingMicroservices/Accounts/pom.xml
+++ b/Section 1 - BuildingMicroservices/Accounts/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.eazybytes</groupId>
+    <groupId>com.microservices</groupId>
     <artifactId>accounts</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>accounts</name>
