--- a/Section 3 - ConigServer/Section 3(b) - Config/ConfigServer/src/main/resources/application.yml
+++ b/Section 3 - ConigServer/Section 3(b) - Config/ConfigServer/src/main/resources/application.yml
@@ -4,9 +4,17 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: native
+    # active: native
+    active: git
   cloud:
     config:
       server:
-        native:
-          search-locations: "classpath:/config"
+        # native:
+          # search-locations: "classpath:/config"
+          # search-locations: "file:///Users//avnis//Documents//config"
+        git:
+          uri: "https://github.com/avnish09shri/config-server.git"
+          default-label: master
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
