--- a/Section 7 - CircuitBreaker/gatewayserver/pom.xml
+++ b/Section 7 - CircuitBreaker/gatewayserver/pom.xml
@@ -41,6 +41,10 @@
 			<artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -82,7 +86,7 @@
 				<version>3.4.1</version>
 				<configuration>
 					<to>
-						<image>avnish09/${project.artifactId}:06</image>
+						<image>avnish09/${project.artifactId}:07</image>
 					</to>
 				</configuration>
 			</plugin>
